--- a/assets/style.scss
+++ b/assets/style.scss
@@ -301,8 +301,110 @@ section.signs {
     border-right: 1px solid;
     border-bottom: 1px solid;
     background: #fff;
-    p {
-      line-height: 0.6em;
+    .inner {
+      width: 100%;
+      height: 100%;
+      background: yellow;
+      .xs {
+        span {
+          position: absolute;
+          // display: flex;
+          text-align: center;
+          transform-origin: 0% 0%;
+        }
+        $wrapperW: 480px;
+        $wrapperH: 192px;
+        .arc-1{
+          left: 111px / $wrapperW * 100%;
+          top: 41.31px / $wrapperH * 100%;
+          transform: rotate(-15.75deg);
+        }
+        .arc-2{
+          left: 139.39px / $wrapperW * 100%;
+          top: 34.42px / $wrapperH * 100%;
+          transform: rotate(-10.44deg);
+        }
+        .arc-3{
+          left: 170.21px / $wrapperW * 100%;
+          top: 28.73px / $wrapperH * 100%;
+          transform: rotate(-5.9deg);
+        }
+        .arc-4{
+          left: 206.56px / $wrapperW * 100%;
+          top: 25.15px / $wrapperH * 100%;
+          transform: rotate(-2.37deg);
+        }
+        .arc-5{
+          left: 235.16px / $wrapperW * 100%;
+          top: 24px / $wrapperH * 100%;
+          transform: rotate(0.56deg);
+        }
+        .arc-6{
+          left: 263.33px / $wrapperW * 100%;
+          top: 24.3px / $wrapperH * 100%;
+          transform: rotate(3.43deg);
+        }
+        .arc-7{
+          left: 290.75px / $wrapperW * 100%;
+          top: 25.91px / $wrapperH * 100%;
+          transform: rotate(6.73deg);
+        }
+        .arc-8{
+          left: 320.04px / $wrapperW * 100%;
+          top: 29.55px / $wrapperH * 100%;
+          transform: rotate(9.59deg);
+        }
+        .arc-9{
+          left: 334.63px / $wrapperW * 100%;
+          top: 31.88px / $wrapperH * 100%;
+          transform: rotate(12.7deg);
+        }
+        .arc-10{
+          left: 360.38px / $wrapperW * 100%;
+          top: 37.56px / $wrapperH * 100%;
+          transform: rotate(18.56deg);
+        }
+        .arc-11{
+          left: 127.19px / $wrapperW * 100%;
+          top: 104.48px / $wrapperH * 100%;
+          transform: rotate(14.79deg);
+        }
+        .arc-12{
+          left: 158.38px / $wrapperW * 100%;
+          top: 112.65px / $wrapperH * 100%;
+          transform: rotate(8.77deg);
+        }
+        .arc-13{
+          left: 191.37px / $wrapperW * 100%;
+          top: 117.8px / $wrapperH * 100%;
+          transform: rotate(3.93deg);
+        }
+        .arc-14{
+          left: 232.63px / $wrapperW * 100%;
+          top: 120.32px / $wrapperH * 100%;
+          transform: rotate(-0.07deg);
+        }
+        .arc-15{
+          left: 260.52px / $wrapperW * 100%;
+          top: 120.24px / $wrapperH * 100%;
+          transform: rotate(-3.15deg);
+        }
+        .arc-16{
+          left: 287.79px / $wrapperW * 100%;
+          top: 118.56px / $wrapperH * 100%;
+          transform: rotate(-5.68deg);
+        }
+        .arc-17{
+          left: 300.71px / $wrapperW * 100%;
+          top: 117.61px / $wrapperH * 100%;
+          transform: rotate(-9.1deg);
+        }
+        .arc-18{
+          left: 333.84px / $wrapperW * 100%;
+          top: 112.45px / $wrapperH * 100%;
+          transform: rotate(-15.31deg);
+        }
+      }
     }
   }
   .col-hopkee {
