--- a/assets/style.css
+++ b/assets/style.css
@@ -446,95 +446,100 @@ section.signs .bowery-savings {
   width: 50vw;
   height: 33.3333333333vw;
   border-right: 1px solid; }
-  section.signs .bowery-savings .arc p.bowery span {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    line-height: 100%;
-    transform-origin: 0% 0%; }
-  section.signs .bowery-savings .arc p.bowery .arc-1 {
-    left: 6.94%;
-    top: 71.97%;
-    transform: rotate(-86.24deg); }
-  section.signs .bowery-savings .arc p.bowery .arc-2 {
-    left: 7.34%;
-    top: 63.28%;
-    transform: rotate(-77.67deg); }
-  section.signs .bowery-savings .arc p.bowery .arc-3 {
-    left: 8.95%;
-    top: 52.93%;
-    transform: rotate(-69deg); }
-  section.signs .bowery-savings .arc p.bowery .arc-4 {
-    left: 12.2%;
-    top: 41.51%;
-    transform: rotate(-57.74deg); }
-  section.signs .bowery-savings .arc p.bowery .arc-5 {
-    left: 15.51%;
-    top: 33.77%;
-    transform: rotate(-49.16deg); }
-  section.signs .bowery-savings .arc p.bowery .arc-6 {
-    left: 20.08%;
-    top: 25.83%;
-    transform: rotate(-38.54deg); }
-  section.signs .bowery-savings .arc p.bowery .arc-7 {
-    left: 27.17%;
-    top: 17.73%;
-    transform: rotate(-28.67deg); }
-  section.signs .bowery-savings .arc p.bowery .arc-8 {
-    left: 32.26%;
-    top: 13.63%;
-    transform: rotate(-20.78deg); }
-  section.signs .bowery-savings .arc p.bowery .arc-9 {
-    left: 37.84%;
-    top: 10.51%;
-    transform: rotate(-12.55deg); }
-  section.signs .bowery-savings .arc p.bowery .arc-10 {
-    left: 46.4%;
-    top: 8.16%;
-    transform: rotate(-1.55deg); }
-  section.signs .bowery-savings .arc p.bowery .arc-11 {
-    left: 51.99%;
-    top: 7.98%;
-    transform: rotate(6.18deg); }
-  section.signs .bowery-savings .arc p.bowery .arc-12 {
-    left: 57.94%;
-    top: 8.99%;
-    transform: rotate(14.51deg); }
-  section.signs .bowery-savings .arc p.bowery .arc-13 {
-    left: 64.15%;
-    top: 11.59%;
-    transform: rotate(21.21deg); }
-  section.signs .bowery-savings .arc p.bowery .arc-14 {
-    left: 67.54%;
-    top: 13.46%;
-    transform: rotate(28.25deg); }
-  section.signs .bowery-savings .arc p.bowery .arc-15 {
-    left: 73.75%;
-    top: 18.58%;
-    transform: rotate(37.71deg); }
-  section.signs .bowery-savings .arc p.bowery .arc-16 {
-    left: 79.19%;
-    top: 25.07%;
-    transform: rotate(46.04deg); }
-  section.signs .bowery-savings .arc p.bowery .arc-17 {
-    left: 84.64%;
-    top: 34.17%;
-    transform: rotate(57.11deg); }
-  section.signs .bowery-savings .arc p.bowery .arc-18 {
-    left: 87.99%;
-    top: 42.02%;
-    transform: rotate(66deg); }
-  section.signs .bowery-savings .arc p.bowery .arc-19 {
-    left: 90.8%;
-    top: 51.74%;
-    transform: rotate(75.49deg); }
-  section.signs .bowery-savings .arc p.bowery .arc-20 {
-    left: 92.5%;
-    top: 62.11%;
-    transform: rotate(84.7deg); }
+  section.signs .bowery-savings .inner {
+    height: 100%; }
+  section.signs .bowery-savings p.bowery {
+    width: 200%;
+    height: 100%;
+    margin-left: -50%;
+    text-align: center; }
+    section.signs .bowery-savings p.bowery span {
+      position: relative;
+      display: inline-block;
+      line-height: 100%; }
+    section.signs .bowery-savings p.bowery .arc-1 {
+      left: 7.7159722222%;
+      top: 62%;
+      transform: rotate(-86.24deg); }
+    section.signs .bowery-savings p.bowery .arc-2 {
+      left: 5.3041666667%;
+      top: 53.46%;
+      transform: rotate(-77.67deg); }
+    section.signs .bowery-savings p.bowery .arc-3 {
+      left: 3.3194444444%;
+      top: 45.16%;
+      transform: rotate(-69deg); }
+    section.signs .bowery-savings p.bowery .arc-4 {
+      left: 2.4354166667%;
+      top: 35.06%;
+      transform: rotate(-57.74deg); }
+    section.signs .bowery-savings p.bowery .arc-5 {
+      left: 1.2881944444%;
+      top: 27.68%;
+      transform: rotate(-49.16deg); }
+    section.signs .bowery-savings p.bowery .arc-6 {
+      left: 0.0743055556%;
+      top: 20.54%;
+      transform: rotate(-38.54deg); }
+    section.signs .bowery-savings p.bowery .arc-7 {
+      left: -0.5%;
+      top: 15.12%;
+      transform: rotate(-28.67deg); }
+    section.signs .bowery-savings p.bowery .arc-8 {
+      left: -0.6770833333%;
+      top: 11.65%;
+      transform: rotate(-20.78deg); }
+    section.signs .bowery-savings p.bowery .arc-9 {
+      left: -1.0479166667%;
+      top: 9.44%;
+      transform: rotate(-12.55deg); }
+    section.signs .bowery-savings p.bowery .arc-10 {
+      left: 0.0652777778%;
+      top: 8.06%;
+      transform: rotate(-1.55deg); }
+    section.signs .bowery-savings p.bowery .arc-11 {
+      left: 0.1215277778%;
+      top: 8.43%;
+      transform: rotate(6.18deg); }
+    section.signs .bowery-savings p.bowery .arc-12 {
+      left: -0.2423611111%;
+      top: 9.88%;
+      transform: rotate(14.51deg); }
+    section.signs .bowery-savings p.bowery .arc-13 {
+      left: -0.3055555556%;
+      top: 11.93%;
+      transform: rotate(21.21deg); }
+    section.signs .bowery-savings p.bowery .arc-14 {
+      left: -0.4534722222%;
+      top: 14.89%;
+      transform: rotate(28.25deg); }
+    section.signs .bowery-savings p.bowery .arc-15 {
+      left: -0.9055555556%;
+      top: 19.93%;
+      transform: rotate(37.71deg); }
+    section.signs .bowery-savings p.bowery .arc-16 {
+      left: -1.4715277778%;
+      top: 25.66%;
+      transform: rotate(46.04deg); }
+    section.signs .bowery-savings p.bowery .arc-17 {
+      left: -1.6763888889%;
+      top: 34.44%;
+      transform: rotate(57.11deg); }
+    section.signs .bowery-savings p.bowery .arc-18 {
+      left: -3.0875%;
+      top: 42.16%;
+      transform: rotate(66deg); }
+    section.signs .bowery-savings p.bowery .arc-19 {
+      left: -5.0736111111%;
+      top: 51.29%;
+      transform: rotate(75.49deg); }
+    section.signs .bowery-savings p.bowery .arc-20 {
+      left: -7.5618055556%;
+      top: 60.41%;
+      transform: rotate(84.7deg); }
   section.signs .bowery-savings .inner p.save {
     line-height: 0.9em;
-    margin-top: 1.4em; }
+    margin-top: 2.2em; }
 section.signs .nypl {
   width: 50vw;
   height: 20vw;
