--- a/assets/style.scss
+++ b/assets/style.scss
@@ -509,125 +509,107 @@ section.signs {
     width: $col_width * 3;
     height: $col_width * 2;
     border-right: 1px solid;
-    .arc {
-      p.bowery {
-        span {
-          position: absolute;
-          // top: 50%;
-          // left: 50%;
-          // margin-right: -50%;
-          // transform: translate(-50%, -50%);
-          display: flex;
-          align-items: center;
-          line-height: 100%;
-          transform-origin: 0% 0%;
-        }
-        .arc-1 {
-          left: 6.94%; //left: 50px; 
-          top: 71.97%;
-          transform: rotate(-86.24deg);
-        }
-        .arc-2 {
-          left: 7.34%;
-          top: 63.28%;
-          transform: rotate(-77.67deg);
-        }
-        .arc-3 {
-          left: 8.95%;
-          top: 52.93%;
-          transform: rotate(-69deg);
-        }
-        .arc-4 {
-          left: 12.2%;
-          top: 41.51%;
-          transform: rotate(-57.74deg);
-        }
-        .arc-5 {
-          left: 15.51%;
-          top: 33.77%;
-          transform: rotate(-49.16deg);
-        }
-        .arc-6 {
-          left: 20.08%;
-          top: 25.83%;
-          transform: rotate(-38.54deg);
-        }
-        .arc-7 {
-          left: 27.17%;
-          top: 17.73%;
-          transform: rotate(-28.67deg);
-        }
-        .arc-8 {
-          left: 32.26%;
-          top: 13.63%;
-          transform: rotate(-20.78deg);
-        }
-        .arc-9 {
-          left: 37.84%;
-          top: 10.51%;
-          transform: rotate(-12.55deg);
-        }
-        .arc-10 {
-          left: 46.4%;
-          top: 8.16%;
-          transform: rotate(-1.55deg);
-        }
-        .arc-11 {
-          left: 51.99%;
-          top: 7.98%;
-          transform: rotate(6.18deg);
-        }
-        .arc-12 {
-          left: 57.94%;
-          top: 8.99%;
-          transform: rotate(14.51deg);
-        }
-        .arc-13 {
-          left: 64.15%;
-          top: 11.59%;
-          transform: rotate(21.21deg);
-        }
-        .arc-14 {
-          left: 67.54%;
-          top: 13.46%;
-          transform: rotate(28.25deg);
-        }
-        .arc-15 {
-          left: 73.75%;
-          top: 18.58%;
-          transform: rotate(37.71deg);
-        }
-        .arc-16 {
-          left: 79.19%;
-          top: 25.07%;
-          transform: rotate(46.04deg);
-        }
-        .arc-17 {
-          left: 84.64%;
-          top: 34.17%;
-          transform: rotate(57.11deg);
-        }
-        .arc-18 {
-          left: 87.99%;
-          top: 42.02%;
-          transform: rotate(66deg);
-        }
-        .arc-19 {
-          left: 90.8%;
-          top: 51.74%;
-          transform: rotate(75.49deg);
-        }
-        .arc-20 {
-          left: 92.5%;
-          top: 62.11%;
-          transform: rotate(84.7deg);
-        }
+    .inner {
+      height: 100%;
+    }
+    p.bowery {
+      width: 200%;
+      height: 100%;
+      margin-left: -50%;
+
+      text-align: center;
+      span {
+        position: relative;
+        display: inline-block;
+        line-height: 100%;
+        // transform: rotate(0deg)!important;
+      }
+      $wrapperW: 1440px;
+      .arc-1 {
+        left: 111.11px / $wrapperW * 100%; top: 62%;
+        transform: rotate(-86.24deg);
+      }
+      .arc-2 {
+        left: 76.38px / $wrapperW * 100%; top: 53.46%;
+        transform: rotate(-77.67deg);
+      }
+      .arc-3 {
+        left: 47.8px / $wrapperW * 100%; top: 45.16%;
+        transform: rotate(-69deg);
+      }
+      .arc-4 {
+        left: 35.07px / $wrapperW * 100%; top: 35.06%;
+        transform: rotate(-57.74deg);
+      }
+      .arc-5 {
+        left: 18.55px / $wrapperW * 100%; top: 27.68%;
+        transform: rotate(-49.16deg);
+      }
+      .arc-6 {
+        left: 1.07px / $wrapperW * 100%; top: 20.54%;
+        transform: rotate(-38.54deg);
+      }
+      .arc-7 {
+        left: -7.2px / $wrapperW * 100%; top: 15.12%;
+        transform: rotate(-28.67deg);
+      }
+      .arc-8 {
+        left: -9.75px / $wrapperW * 100%; top: 11.65%;
+        transform: rotate(-20.78deg);
+      }
+      .arc-9 {
+        left: -15.09px / $wrapperW * 100%; top: 9.44%;
+        transform: rotate(-12.55deg);
+      }
+      .arc-10 {
+        left: 0.94px / $wrapperW * 100%; top: 8.06%;
+        transform: rotate(-1.55deg);
+      }
+      .arc-11 {
+        left: 1.75px / $wrapperW * 100%; top: 8.43%;
+        transform: rotate(6.18deg);
+      }
+      .arc-12 {
+        left: -3.49px / $wrapperW * 100%; top: 9.88%;
+        transform: rotate(14.51deg);
+      }
+      .arc-13 {
+        left: -4.4px / $wrapperW * 100%; top: 11.93%;
+        transform: rotate(21.21deg);
+      }
+      .arc-14 {
+        left: -6.53px / $wrapperW * 100%; top: 14.89%;
+        transform: rotate(28.25deg);
+      }
+      .arc-15 {
+        left: -13.04px / $wrapperW * 100%; top: 19.93%;
+        transform: rotate(37.71deg);
+      }
+      .arc-16 {
+        left: -21.19px / $wrapperW * 100%; top: 25.66%;
+        transform: rotate(46.04deg);
+      }
+      .arc-17 {
+        left: -24.14px / $wrapperW * 100%; top: 34.44%;
+        transform: rotate(57.11deg);
+      }
+      .arc-18 {
+        left: -44.46px / $wrapperW * 100%; top: 42.16%;
+        transform: rotate(66deg);
+      }
+      .arc-19 {
+        left: -73.06px / $wrapperW * 100%; top: 51.29%;
+        transform: rotate(75.49deg);
+      }
+      .arc-20 {
+        left: -108.89px / $wrapperW * 100%; top: 60.41%;
+        transform: rotate(84.7deg);
       }
     }
     .inner {
       p.save {
         line-height: 0.9em;
-        margin-top: 1.4em;
+        margin-top: 2.2em;
       }
     }
   }
